--- a/css/compiled/fast.css
+++ b/css/compiled/fast.css
@@ -1,13 +1,14 @@
 @import url(https://fonts.googleapis.com/css?family=Montserrat);
-@import url(https://fonts.googleapis.com/css?family=Libre+Baskerville:400,400italic);
+@import url(https://fonts.googleapis.com/css?family=Libre+Baskerville:400italic);
+@import url(https://fonts.googleapis.com/css?family=Old+Standard+TT);
 /* use n*$base-unit for all font-sizing, (vertical) spacing */
 /* structural stuff */
 body, html {
   margin: 0;
   height: 100%;
   width: 100%;
-  color: #454545;
-  font-family: "Libre Baskerville", sans-serif;
+  color: #333;
+  font-family: "Old Standard TT", sans-serif;
   background-color: #fEfDf8;
   font-size: 16px; }
 
